		a few method calls.
	Some of the Grid3D subclasses were using fieldx[y][z] when
		fieldxy[z] was available -- we updated them to use fieldxy[z]
	Added option for hit-testing on OrientedPortrayal2D at the user's
		choice.
	Fixed bug null pointer exception in ChartingPropertyInspector
	Refactoring ChartGenerator to allow for Histograms and other kinds of
		charts which share common code.  This required moving to a new
		package and renaming the old ChartGenerator to
		TimeSeriesChartGenerator.  You'll need to update your code.
	Added HistogramChartingPropertyInspector, moved 
		ChartingPropertyInspector to 
		TimeSeriesChartingPropertyInspector, and made an abstract
		superclass ChartingPropertyInspector
	Updated howto.html to reflect the revision
	Minor bug fix to Schedule: if the time was AFTER_SIMULATION, and
		someone scheduled an event at that time, then it'd get
		bumped to AFTER_SIMULATION's bits + 1, which equals NaN.
		So we keep it at AFTER_SIMULATION (which will properly
		fail).
	Added portrayalForNonNull as an option to FieldPortrayal.  It's
		checked for after checking to see if the object is
		a Portrayal itself, but before searching the hash table
		for a registered portrayal.  The code is rearranged
		a bit to be easier to read and cleaner.  The purpose for
		portrayalForNonNull is to make typical 
		ObjectGridPortrayal2Ds quite a bit faster because you
		can just provide a portrayal for null objects and
		a portrayal for non-null objects.  It shouldn't slow
		down other graphics stuff except by a tiny amount, as
		it's just another quick check.
	Added MiniHistogram.makeBucketPositions, though it's presently
		unused.
	Added some gizmos in HeatBugs as example for Histogram
	Indexed.getValue() explicitly throws IndexOutOfBoundsException
	Minor null pointer exception in LightCycles fixed
	Small efficiency improvements in AbstractGrid2D/3D and
		SparseGrid2D/3D
	Added scheme example
	Added PSO3D, made small tweaks to PSO